# cclaml

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SKILL.md
src/: cli.rs  main.rs  model.rs  output.rs  parser.rs  transform.rs
